# acb-tool

./: .gitignore  README.md  acb_tool.py  pyproject.toml  requirements.txt
core/: __init__.py  acb.py  awb.py  hca.py  inject.py  models.py  paths.py  project.py  version.py
docs/: DEPENDENCIES.md  FORMAT_NOTES.md  PHASE_0_FORMAT_REPORT.md  PLAN.md  known_issues.md  phase1_pycricodecsex_derisk.md  phase2_acb_structure.md  phase3_encoder_validation.md  test_corpus.md
docs/screenshots/: README.md
gui/: __init__.py  about.py  app.py  formatting.py  preview.py  tab_browse.py  tab_convert.py  tab_extract.py  tab_inject.py  theme.py  widgets.py
packaging/: LICENSE.txt  build_installer.ps1  installer.iss  smoke_test.py
scripts/: inject_cli_repro.py  test_awb_roundtrip.py  validate_encoder.py  xwb_to_csv.py
