[project]
name = "acb-tool"
version = "0.1.0"   # KEEP IN SYNC WITH core/__version__.py
description = "Extract and inject CRIWARE ADX2 audio (ACB + AWB) for RE4 PS4/Switch."
requires-python = ">=3.10"

[project.scripts]
acb-tool = "acb_tool:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
